# CAPSTONE

./: .gitignore  .gitmodules  EXPERIMENTAL_WORKFLOW_README.md
results/: baseline_run1.txt.csv  baseline_run1.txt_beh_1.csv  baseline_run1.txt_beh_1_steps_baseline_run1_1.csv  baseline_run1.txt_beh_3.csv  baseline_run1.txt_beh_3_steps_baseline_run1_1.csv  baseline_run1.txt_beh_6.csv  baseline_run1.txt_beh_6_steps_baseline_run1_1.csv  baseline_run1.txt_steps_baseline_run1_1.csv
src/DATASETS/: ground_truth_analysis.py  verify_metrics.py
src/DATASETS/results/: ground_truth_metrics.json
src/hunav_gazebo_wrapper/: CMakeLists.txt  README.md
src/hunav_gazebo_wrapper/behavior_trees/: agents_cafe__agent_1_bt.xml  (+8 more)
src/hunav_sim/: .gitignore
src/hunav_sim/hunav_behavior_tree_generator/: package.xml  setup.cfg  setup.py
src/hunav_sim/hunav_behavior_tree_generator/hunav_behavior_tree_generator/: generator_cli.py
src/hunav_sim/hunav_behavior_tree_generator/hunav_behavior_tree_generator/config/: config.py
src/hunav_sim/hunav_behavior_tree_generator/hunav_behavior_tree_generator/core/: behavior.py  file_generator.py  scenario_manager.py
src/hunav_sim/hunav_behavior_tree_generator/hunav_behavior_tree_generator/prompts/: BT_gen.txt
src/hunav_sim/hunav_behavior_tree_generator/hunav_behavior_tree_generator/templates/: bt_template_footer.xml  bt_template_header.xml
src/hunav_sim/hunav_behavior_tree_generator/hunav_behavior_tree_generator/ui/: interface_manager.py
src/hunav_sim/hunav_behavior_tree_generator/hunav_behavior_tree_generator/utils/: llm_utils.py
(+50 files in other folders)
